# supply-risk-atlas

./: .gitignore  .npmrc  AGENTS.md  PLANS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  sitecustomize.py
.github/workflows/: ci.yml  quality-gates.yml  render-manual-deploy.yml
apps/web/: next.config.mjs  package.json  tsconfig.json
configs/environments/: core_environments.yaml
configs/features/: core_features.yaml  default.json
configs/labels/: core_labels.yaml  default.json
configs/ontology/: edge_types.yaml  event_types.yaml  node_types.yaml  risk_labels.yaml  semiconductor.yaml  semiconductor_chain_layers.yaml  semiconductor_edge_catalog.yaml  semiconductor_node_catalog.yaml  semiconductor_relationship_semantics.yaml
configs/sources/: default.yaml  public_real_node_catalog.yaml  semiconductor.yaml  (+2 more)
data_contracts/: README.md
docs/: quality-gates.md
docs/api/: envelope.md
graph_kernel/: __init__.py  event_store.py  events.py  graph_diff.py  graph_quality.py  graph_versioning.py  lineage.py  path_index.py  promoted_graph_quality.py  promoted_pipeline.py  quality.py  relationship_builder.py  semiconductor_snapshot.py  snapshot_builder.py  snapshots.py  source_manifest.py  supply_demand_builder.py  synthetic.py
ml/: __init__.py  baseline.py  dataset.py  features.py  labels.py
scripts/: browser-smoke.mjs  build_promoted_graph.py  check-deployed-version.py  check-no-one-line-python.py  check-no-raw-payloads.py  release-review.mjs  security_scan.py
services/: __init__.py
sra_core/: __init__.py
(+538 files in other folders)
